--- a/css/style.css
+++ b/css/style.css
@@ -4,44 +4,41 @@ body {
 }
 
 .wrapper {
-/*    position: fixed;*/
-/*    bottom: 0;*/
-/*    left: 0;*/
     width: 100%;
     height: 100%;
-/*    border: 1px solid black;    */
 }
 
-.crd-block{
-    position: relative;
-    
-    margin: 0 auto;
-    border: 1px solid blue;
-    width: 260px;
-    height: 100%;
-}
-
-.crd {
+.crd-container {
     position: absolute;
-    top: 40%;
-    left: 40%;
-	border: 1px solid red;
-	width: 60px;
-    padding: 0;
-    margin: 0;
-    background-color: #ccc;
-/*    margin-left:-17.5px;*/
-	height: 100px;
+    top: 20%;   /*TODO move to JS onInit*/
+    left: 40%;  /*TODO move to JS onInit*/
+/*	border: 1px solid red;*/
     transform: rotate(0);
-/*    float: left;*/
-/*    display: inline-block;*/
+    transition : 'transform 0.5s ease-out';
 }
 
-.crd1 {
-	border: 1px solid red;
-	width: 60px;
-    padding: 0;
-    margin: 0;
-	height: 100px;
-/*    display: inline-block;*/
+.crd-front {    
+    position: absolute;
+    border: 1px solid #e2e0e0;
+    top: 0;
+    left: 0;
+    background: transparent url(../img/shirt_red.svg) -3px -3px no-repeat;
+	width: 132px;
+	height: 182px;
+    backface-visibility : hidden;
+    border-radius: 20px;
+}
+
+.crd-back {
+    position: absolute;
+    border: 1px solid #e2e0e0;
+    top: 0;
+    left: 0;
+    background: transparent url(../img/white_deck_jack_of_hearts.svg) -3px -3px no-repeat ;
+	width: 132px;
+	height: 182px;
+    backface-visibility : hidden;
+    transform: rotateY(-180deg);
+    border-radius: 20px;
+    box-shadow: 4px 4px 5px rgba(0,0,0,.5);
 }
